Source/WebKit2/WebProcess/WebPage/mac/RemoteLayerTreeDrawingArea.mm
@@ -51,6 +51,8 @@ RemoteLayerTreeDrawingArea::RemoteLayerTreeDrawingArea(WebPage* webPage, const W
     , m_layerFlushTimer(this, &RemoteLayerTreeDrawingArea::layerFlushTimerFired)
     , m_isFlushingSuspended(false)
     , m_hasDeferredFlush(false)
+    , m_waitingForBackingStoreSwap(false)
+    , m_hadFlushDeferredWhileWaitingForBackingStoreSwap(false)
 {
     webPage->corePage()->settings().setForceCompositingMode(true);
 #if PLATFORM(IOS)
@@ -312,12 +314,15 @@ void RemoteLayerTreeDrawingArea::flushLayers()
         return;
     }
 
+    if (m_waitingForBackingStoreSwap) {
+        m_hadFlushDeferredWhileWaitingForBackingStoreSwap = true;
+        return;
+    }
+
     m_webPage->layoutIfNeeded();
     m_webPage->corePage()->mainFrame().view()->flushCompositingStateIncludingSubframes();
 
     m_remoteLayerTreeContext->flushOutOfTreeLayers();
-
-    ASSERT(m_rootLayer);
 
     // FIXME: minize these transactions if nothing changed.
     RemoteLayerTreeTransaction layerTransaction;
@@ -330,7 +335,21 @@ void RemoteLayerTreeDrawingArea::flushLayers()
         toRemoteScrollingCoordinator(m_webPage->scrollingCoordinator())->buildTransaction(scrollingTransaction);
 #endif
 
+    m_waitingForBackingStoreSwap = true;
     m_webPage->send(Messages::RemoteLayerTreeDrawingAreaProxy::CommitLayerTree(layerTransaction, scrollingTransaction));
+}
+
+void RemoteLayerTreeDrawingArea::didUpdate()
+{
+    // FIXME: This should use a counted replacement for setLayerTreeStateIsFrozen, but
+    // the callers of that function are not strictly paired.
+
+    m_waitingForBackingStoreSwap = false;
+
+    if (m_hadFlushDeferredWhileWaitingForBackingStoreSwap) {
+        scheduleCompositingLayerFlush();
+        m_hadFlushDeferredWhileWaitingForBackingStoreSwap = false;
+    }
 }
 
 } // namespace WebKit
